fix css property order, change from .allCompl+label to allComplLabel, add class for button&ul, del z-index

--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 }
 
 body {
-  background-color: #f5f5f5;
   margin: 0 auto;
+  background-color: #f5f5f5;
 }
 
 .mainSection {
@@ -19,66 +19,62 @@ body {
 }
 
 .mainSection h1 {
-  color: rgba(175, 47, 47, 0.15);
-  font-size: 100px;
   margin: 20px auto;
+  font-size: 100px;
+  color: rgba(175, 47, 47, 0.15);
 }
 
 .todoInput {
-  width: 100%;
+  position: relative;
   max-width: 600px;
+  width: 100%;
 }
 
 .todoInput input[type="text"] {
-  position: relative;
+  width: 100%;
+  height: auto;
+  font-size: 1.6em;
   padding: 20px 16px 20px 60px;
   border: 2px solid transparent;
-  width: 100%;
-  font-size: 1.6em;
-  height: auto;
   box-shadow: 1px 5px 5px 1px rgba(0, 0, 0, 0.03);
   -webkit-font-smoothing: antialiased;
 }
 
 .btnAllCompl {
-  position: relative;
   height: 0;
 }
 
 .allCompl {
-  position: relative;
-  left: 0;
-  top: 0;
-  opacity: 0;
-  border: none;
   height: 1px;
   width: 1px;
+  border: none;
+  opacity: 0;
 }
 
-.allCompl+label {
-  cursor: pointer;
-  align-items: center;
-  display: flex;
-  font-size: 0;
-  height: 65px;
-  justify-content: center;
-  left: 0.5%;
+.allComplLabel {
   position: absolute;
-  top: -67px;
+  left: 0.5%;
+  top: 6%;
+  display: flex;
   width: 45px;
+  height: 65px;
+  align-items: center;
+  justify-content: center;
+  font-size: 0;
+  cursor: pointer;
 }
 
-.allCompl+label::before {
-  color: #949494;
+.allComplLabel::before {
   content: "❯";
   display: inline-block;
-  font-size: 22px;
   padding: 10px 27px;
-  -webkit-transform: rotate(90deg);
+  color: #949494;
+  font-size: 22px;
   transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
 }
 
-.allCompl.black+label::before {
+.allComplLabel.black::before {
   color: black;
 }
 
@@ -92,8 +88,8 @@ body {
 }
 
 input::placeholder {
-  color: #e8e6e6;
   font-style: italic;
+  color: #e8e6e6;
 }
 
 input:focus,
@@ -103,23 +99,22 @@ input:active {
 }
 
 .hiddenBlock {
-  width: 100%;
-  max-width: 600px;
   display: none;
+  max-width: 600px;
+  width: 100%;
 }
 
 .listItem {
+  display: flex;
+  padding: 20px 20px 20px 16px;
   width: 100%;
   height: 100%;
-  padding: 20px 20px 20px 16px;
-  border-bottom: 1px solid #ededed;
-  background-color: white;
-  box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
-  display: flex;
   gap: 5%;
   justify-content: space-between;
   align-items: center;
-  position: relative;
+  background-color: white;
+  border-bottom: 1px solid #ededed;
+  box-shadow: inset 0 -2px 1px rgba(0, 0, 0, 0.03);
 }
 
 .listItem:hover .deleteBtn {
@@ -132,39 +127,38 @@ input:active {
 
 .leftItem {
   display: flex;
-  gap: 30px;
   width: 100%;
+  gap: 30px;
 }
 
 .leftItem label {
   display: block;
   width: 100%;
-  font-weight: 400;
+  text-align: left;
   font-size: 18px;
+  font-weight: 400;
   line-height: 1.2;
   transition: color 0.4s;
   word-break: break-all;
-  text-align: left;
 }
 
 .hiddenInput {
-  z-index: 2;
-  display: none;
   position: absolute;
   top: 0%;
   right: 0;
+  display: none;
   padding: 25px;
   border: 2px solid rgba(175, 47, 47, 0.15);
 }
 
 .deleteBtn {
-  visibility: hidden;
-  color: #949494;
-  font-size: 30px;
+  width: 30px;
   height: 30px;
   margin: auto 0;
+  color: #949494;
+  font-size: 30px;
   transition: color 0.2s ease-out;
-  width: 30px;
+  visibility: hidden;
 }
 
 .deleteBtn::after {
@@ -178,68 +172,57 @@ input:active {
   border-top: 1px solid #e6e6e6;
 }
 
-li button, .clearCompl {
-  border: none;
+.clearBtn {
   background-color: transparent;
+  border: none;
 }
 
 .footerList {
-  width: 100%;
-  background-color: white;
+  position: relative;
   display: flex;
+  width: 100%;
   padding: 10px 20px 15px 16px;
   gap: 20%;
   align-items: center;
-  position: relative;
   color: #777;
+  background-color: white;
 }
 
 .footerList:before {
+  z-index: -1;
   content: "";
   position: absolute;
   right: 0;
   bottom: 0;
   left: 0;
   height: 50px;
-  overflow: hidden;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 8px 0 -3px #f6f6f6, 0 9px 1px -3px rgba(0, 0, 0, 0.2), 0 16px 0 -6px #f6f6f6, 0 17px 2px -6px rgba(0, 0, 0, 0.2);
   text-align: center;
   border-top: 1px solid #e6e6e6;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 8px 0 -3px #f6f6f6, 0 9px 1px -3px rgba(0, 0, 0, 0.2), 0 16px 0 -6px #f6f6f6, 0 17px 2px -6px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
 }
 
-ul {
-  z-index: 2;
-  list-style: none;
+.ulList {
   display: flex;
   gap: 10px;
   align-items: center;
   text-align: center;
-}
-
-.mainList {
-  display: block;
+  list-style: none;
 }
 
 .footerBtn {
-  z-index: 2;
-  cursor: pointer;
+  padding: 4px;
   color: #777;
   border: 1px solid transparent;
-  padding: 4px;
+  cursor: pointer;
 }
 
-.footerBtn:hover {
-  border: 1px solid #c18585;
-  border-radius: 4px;
-}
-
-.tabActive {
+.footerBtn:hover, .tabActive  {
   border: 1px solid #c18585;
   border-radius: 4px;
 }
 
 .clearCompl {
-  z-index: 2;
   display: none;
   color: #777;
   text-decoration: none;
@@ -254,11 +237,15 @@ ul {
   display: block;
 }
 
+.activeFlex{
+  display: flex;
+}
+
 @media (max-width: 700px) {
   .footerList {
+    gap: 12%;
     align-items: center;
     justify-content: center;
-    gap: 12%;
   }
 
   .footerList label,
